<resources>
    <string name="app_name">AuthApp</string>
    <string name="started_title">Hello, my friend!</string>
    <string name="started_sub_title">
        Nice to meet you!
        <br><b>Login</b> if you already have an account</br>
        <br><b>Register</b> to get started with the app</br>
    </string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="login_title">Login to app</string>

    <string name="login_sub_title"> <font color="#05AD68"><b>Login</b></font> if you already have an account</string>
    <string name="hint_email">Your email or username</string>
    <string name="login_password">Your password</string>
    <string name="login_forgot_pw">Forgot Password?</string>

    <string name="login_havent_account">
        I don\'t have an account <font color="#05AD68"><b>Register</b></font>
    </string>
    <string name="register_title">Create an account</string>
    <string name="register_sub_title"> <font color="#05AD68"><b>Register</b></font> to get started with the app</string>
    <string name="register_full_name">Your full name</string>
    <string name="register_email">Your email</string>
    <string name="register_username">Your username</string>
    <string name="register_password">Your password</string>
    <string name="register_confirm_password">Confirm Password</string>

    <string name="register_have_account">
        I already have an account <font color="#05AD68"><b>Login</b></font>
    </string>

    <string name="home_title">You are logged in!</string>
    <string name="home_sub_title">Welcome to home</string>
    <string name="btn_logout">LOGOUT</string>
</resources>